--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
 
     <string name="admob_app_id">ca-app-pub-6506911315414653~6740738797</string>
     <string name="interstitial_ad_unit_id">ca-app-pub-6506911315414653/6509638653</string>
+    <string name="suvasam">Suvasam</string>
 </resources>
