moved to HashMap for easy traceability

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,6 @@
     <string name="awareness_sample_desc">hello</string>
     <string name="widget_title">Suvasam</string>
     <string name="widget_sample_data">Sample test</string>
+    <string name="cancel">Cancel</string>
+    <string name="reset">reset</string>
 </resources>
